--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,11 @@
   box-sizing: border-box;
 }
 html{ 
-	  background-color:rgb(0, 0, 0);
-    color: #fff;
     font-size: 18px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    width: 80%;
-    
+    width: 50%;
+    margin:auto;
 }
 
 #particles-js{
@@ -18,17 +16,16 @@ html{
   height: 100%;
   background-color: #08080800;
   position: fixed;
-  margin: auto
-  
+  margin: auto;
   background-repeat: no-repeat;
   z-index: -1;
 }
-
-.containergeneral .navbar {
-    height: calc(8vh - 8px);
-    margin: 0 ;
-    position: fixed;
+.containergeneral{
+    width: 100%;
+    margin: auto;
+    z-index: 100;
 }
+
 .containergeneral .anavbar {
   justify-content: center;
 }
