--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 *{
-  padding: 1px;
-  margin: 1px;
+  padding: 1;
+  margin: 1;
   box-sizing: border-box;
-  
+  text-decoration: none;
+  list-style: none;
 }
 html{ 
     font-size: 18px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     width: 100%;
-    margin:auto;
-    
+    margin:auto; 
 }
-
 #particles-js{
   width: 100%;
   height: 100%;
@@ -40,14 +39,52 @@ html{
     position: fixed;
     z-index: 100;
 }
+
 .containnavbar .anavbar {
   justify-content: center;
+   padding:2px 7px;
 }
-.containnavbar .nav-item {
+/* .containnavbar .nav-item {
   justify-content: center;
   margin: 0 auto;
   width: 200%;
   text-align: center;
+} */
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color: rgb(0, 0, 0) ;
+    font-size: 18px;
+    padding:7px 13 px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    text-decoration: none;
+    list-style: none;
+}
+
+li a:active,  li a:hover
+{
+    background: #000090;
+    transition: .5s;
+    color: #fff;
+
+}
+button .navbar-toggler{
+    font-size: 30px;
+    color: black;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+
 }
 
 .general{
@@ -306,6 +343,7 @@ background-color: rgba(0, 0, 0, 0.459);}
 }
 .desarrollop{
     height: 100%;
+    justify-content: center;
 }
 .modal-container{
     position: fixed;
@@ -447,10 +485,7 @@ background-color: rgba(0, 0, 0, 0.459);}
     
 }
 .botondescargar{
-    margin-left: 44%;
-    margin-right: 43%;
-    margin-bottom: 5%;
-    margin-top: 3%;
+    margin: auto;
 }
 .contacto{
     width: 25%;
@@ -461,12 +496,28 @@ background-color: rgba(0, 0, 0, 0.459);}
     width: 40%;
     height: 40%;
 }
-@media screen and (max-width:1000px){
-    section{
-        flex-direction: column-reverse;
-        align-content: center;
+@media (max-width: 952px){
+    .anavbar{
+        padding-left: 20px;
     }
-    
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+@media (max-width: 858px){
+    .navbar-toggler{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #283773;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
 }
 .contenedorcontacto{
   width: 75%;
