--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,13 @@ background-color: rgba(0, 0, 0, 0.459);}
     
 }
 .botondescargar{
+    display: flex;
+    justify-content: center;
+    width:90%;
+    height: 100%;
     margin: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 .contacto{
     width: 25%;
