--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,22 @@ background-color: rgba(0, 0, 0, 0.459);}
         text-align: center;
         transition: all .5s;
     }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+
+    }
+    li a:hover, li a:active{
+        background: none;
+        color: red;
+    }
+    #check:checked ~ul{
+        left: 0;
+    }
 }
 .contenedorcontacto{
   width: 75%;
