no sale respondive

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    padding: 2;
-    margin: 2;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
@@ -10,19 +10,16 @@
       font-family: 'Lato', sans-serif;
       font-weight: 400;
       width: 100%;
-      margin:auto; 
+      margin:0; 
   }
-  .containergeneral{
-    width: 100%;
-    margin: auto;
-   
-}
+  
 .contenedorsecciones{
-    width: 70%;
+    width: 80%;
     justify-content: center;
-    margin: auto;
+    margin: 0;
     z-index: -1;
     background-color: rgb(255, 255, 255);
+    margin-left: 80%;
 }
 .general{
     justify-content:center;
